# crypto-handshake-lab

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/api/: main.py  routes.py
backend/src/crypto_engine/: __init__.py  handshake.py  parties.py  primitives.py
backend/tests/: test_api.py  test_handshake.py  test_primitives.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ConnectionLine.jsx  EncryptionAnim.jsx  HandshakeViewer.jsx  HexInspector.jsx  HmacAnim.jsx  KeyExchangeAnim.jsx  PartyColumn.jsx  StepCard.jsx  TamperToggle.jsx
frontend/src/hooks/: useHandshake.js
frontend/src/utils/: api.js
